--- a/dotBuild.html
+++ b/dotBuild.html
@@ -112,7 +112,7 @@
             </div>
         </div>
     </section>
-    
+
     <!-- ERC-6551 Section -->
     <section class="py-20 px-6 sm:px-10 md:px-20 bg-gray-900">
         <div class="max-w-6xl mx-auto">
@@ -143,6 +143,47 @@
                         <h4 class="text-lg font-semibold text-white mb-2">Efficiency & Upgradeability</h4>
                         <p class="text-gray-400">ERC-6551 uses a minimal proxy pattern, reducing gas costs and enabling future upgrades without disrupting existing TBAs.</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Token-Bound Assets: Empowering Property Ownership Section -->
+    <section class="py-20 px-6 sm:px-10 md:px-20">
+        <div class="max-w-6xl mx-auto">
+            <h2 class="text-3xl sm:text-4xl font-bold mb-12 text-center text-white">Token-Bound Assets: Empowering Property Ownership</h2>
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
+                <div class="lg:w-full">
+                    <p class="text-lg text-gray-400 mb-6 animate-fadeIn" style="animation-delay: 0.2s;">
+                        Your CEO's vision of a "GAN holding fractionalized tokens" or a "digital twin" is realized through our advanced use of ERC-6551. Each tokenized property acts as its own intelligent, self-managing entity, a Token-Bound Account (TBA) that holds the fractionalized shares and executes all asset-related functions on-chain.
+                    </p>
+                    <p class="text-lg text-gray-400 mb-6 animate-fadeIn" style="animation-delay: 0.4s;">
+                        This innovative approach means the property itself, through its digital twin, becomes the central point of a decentralized ecosystem. This allows for:
+                    </p>
+                    <ul class="space-y-4 text-gray-400 animate-fadeIn" style="animation-delay: 0.6s;">
+                        <li class="flex items-start">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-cyan-400 mr-3 mt-1"><path d="M12 2L2 7l10 5 10-5-10-5z"></path><path d="M2 17l10 5 10-5"></path><path d="M2 12l10 5 10-5"></path></svg>
+                            <span>
+                                **Automated Income Distribution:** Rental income or dividends are collected by the TBA and automatically distributed to the wallets of all fractional token holders, streamlining the process and ensuring transparency.
+                            </span>
+                        </li>
+                        <li class="flex items-start">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-cyan-400 mr-3 mt-1"><path d="M20 14.65V20a2 2 0 01-2 2H4a2 2 0 01-2-2V4a2 2 0 012-2h5.35M18 6L12 12M12 12L18 18M12 12L6 6"></path><path d="M18 6L12 12"></path></svg>
+                            <span>
+                                **Dynamic Ownership Transfer:** The transfer of ownership is as simple as a token transfer on the blockchain, providing a seamless and highly liquid process.
+                            </span>
+                        </li>
+                        <li class="flex items-start">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-cyan-400 mr-3 mt-1"><path d="M12 1L3 6l9 5 9-5-9-5z"></path><path d="M3 14l9 5 9-5"></path><path d="M3 18l9 5 9-5"></path></svg>
+                            <span>
+                                **Controlled Access to O&M Data:** The TBA can programmatically grant secure, role-based access to building managers and contractors for essential Operations & Maintenance (O&M) data, ensuring efficient property management while maintaining security and transparency.
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="lg:w-full hidden lg:flex items-center justify-center animate-fadeIn" style="animation-delay: 0.8s;">
+                    <!-- Placeholder for an illustrative image or SVG -->
+                    <img src="https://placehold.co/500x500/1a202c/e2e8f0?text=Digital+Twin+Concept" alt="Digital Twin Concept" class="rounded-xl shadow-2xl border border-gray-700"/>
                 </div>
             </div>
         </div>
