--- a/dotBuild.html
+++ b/dotBuild.html
@@ -148,17 +148,17 @@
         </div>
     </section>
 
-    <!-- Token-Bound Assets: Empowering Property Ownership Section -->
+    <!-- The Digital Twin: Empowering Smart Property Management Section -->
     <section class="py-20 px-6 sm:px-10 md:px-20">
         <div class="max-w-6xl mx-auto">
-            <h2 class="text-3xl sm:text-4xl font-bold mb-12 text-center text-white">Token-Bound Assets: Empowering Property Ownership</h2>
+            <h2 class="text-3xl sm:text-4xl font-bold mb-12 text-center text-white">The Digital Twin: Empowering Smart Property Management</h2>
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
                 <div class="lg:w-full">
                     <p class="text-lg text-gray-400 mb-6 animate-fadeIn" style="animation-delay: 0.2s;">
-                        Your CEO's vision of a "GAN holding fractionalized tokens" or a "digital twin" is realized through our advanced use of ERC-6551. Each tokenized property acts as its own intelligent, self-managing entity, a Token-Bound Account (TBA) that holds the fractionalized shares and executes all asset-related functions on-chain.
+                        We transform each tokenized property into its own intelligent, self-managing entity—a "digital twin" enabled by ERC-6551. This Token-Bound Account (TBA) holds fractionalized shares and executes all asset-related functions on-chain, creating a decentralized and highly efficient property ecosystem.
                     </p>
                     <p class="text-lg text-gray-400 mb-6 animate-fadeIn" style="animation-delay: 0.4s;">
-                        This innovative approach means the property itself, through its digital twin, becomes the central point of a decentralized ecosystem. This allows for:
+                        This innovative approach allows the property itself to become the central point of a decentralized ecosystem, enabling:
                     </p>
                     <ul class="space-y-4 text-gray-400 animate-fadeIn" style="animation-delay: 0.6s;">
                         <li class="flex items-start">
