Used <strong> for subheadings

--- a/dotBuild.html
+++ b/dotBuild.html
@@ -164,19 +164,19 @@
                         <li class="flex items-start">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-cyan-400 mr-3 mt-1"><path d="M12 2L2 7l10 5 10-5-10-5z"></path><path d="M2 17l10 5 10-5"></path><path d="M2 12l10 5 10-5"></path></svg>
                             <span>
-                                **Automated Income Distribution:** Rental income or dividends are collected by the TBA and automatically distributed to the wallets of all fractional token holders, streamlining the process and ensuring transparency.
+                                <strong class="text-white">Automated Income Distribution:</strong> Rental income or dividends are collected by the TBA and automatically distributed to the wallets of all fractional token holders, streamlining the process and ensuring transparency.
                             </span>
                         </li>
                         <li class="flex items-start">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-cyan-400 mr-3 mt-1"><path d="M20 14.65V20a2 2 0 01-2 2H4a2 2 0 01-2-2V4a2 2 0 012-2h5.35M18 6L12 12M12 12L18 18M12 12L6 6"></path><path d="M18 6L12 12"></path></svg>
                             <span>
-                                **Dynamic Ownership Transfer:** The transfer of ownership is as simple as a token transfer on the blockchain, providing a seamless and highly liquid process.
+                                <strong class="text-white">Dynamic Ownership Transfer:</strong> The transfer of ownership is as simple as a token transfer on the blockchain, providing a seamless and highly liquid process.
                             </span>
                         </li>
                         <li class="flex items-start">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="text-cyan-400 mr-3 mt-1"><path d="M12 1L3 6l9 5 9-5-9-5z"></path><path d="M3 14l9 5 9-5"></path><path d="M3 18l9 5 9-5"></path></svg>
                             <span>
-                                **Controlled Access to O&M Data:** The TBA can programmatically grant secure, role-based access to building managers and contractors for essential Operations & Maintenance (O&M) data, ensuring efficient property management while maintaining security and transparency.
+                                <strong class="text-white">Controlled Access to O&M Data:</strong> The TBA can programmatically grant secure, role-based access to building managers and contractors for essential Operations & Maintenance (O&M) data, ensuring efficient property management while maintaining security and transparency.
                             </span>
                         </li>
                     </ul>
